<resources>
    <string name="app_name">Shan Note</string>
    <string name="title">Title</string>
    <string name="pinned">Pinned</string>
    <string name="there_is_no_note_to_show">There is no note to show</string>
    <string name="add_note">Add Note</string>
    <string name="save_note">Save Note</string>
    <string name="contact_icon">Contact Icon</string>
    <string name="app_version">Version 1.4</string>
    <string name="we_are_tmk_group">We are TMK Group</string>
    <string name="about_us">About Us</string>
    <string name="update_note">Update Note</string>
    <string name="apply">apply</string>
    <string name="newly_created">Newly Created</string>
    <string name="last_updated">Last Updated</string>
</resources>