<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/note_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="?colorPrimaryContainer"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="8dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/title"
            android:textColor="?colorOnPrimaryContainer"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="?colorOnPrimaryContainer"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/note_title" />

        <TextView
            android:id="@+id/note_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="8dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="12/03/2024 08:55 PM"
            android:textColor="?colorOnPrimaryContainer"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/note_content" />

        <ImageView
            android:id="@+id/note_pin"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/pinned"
            android:src="@drawable/pin"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>