<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbNotes"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?colorOnPrimary">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/ibSearch"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="?colorOnBackground"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ibSearch"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/ibAboutUs"
                android:background="@android:color/transparent"
                android:contentDescription="@string/save_note"
                android:src="@drawable/ic_search" />

            <ImageButton
                android:id="@+id/ibAboutUs"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/save_note"
                android:src="@drawable/ic_info" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lySearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbNotes"
        android:layout_margin="8dp"
        android:hint="Search"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNotes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lySearch" />

    <LinearLayout
        android:id="@+id/llEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/empty_note" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/there_is_no_note_to_show"
            android:textAlignment="center"
            android:textColor="?colorError"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="?colorErrorContainer"
        android:contentDescription="@string/add_note"

        android:src="@drawable/ic_add" />

</RelativeLayout>