<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryContainer"
    android:orientation="vertical"
    tools:context=".activity.AboutUsActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAboutUs"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?colorOnPrimary">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/save_note"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/ibBack"
                android:gravity="center_vertical"
                android:text="@string/about_us"
                android:textColor="?colorOnBackground"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/tbAboutUs"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/we_are_tmk_group"
        android:scaleType="fitCenter"
        android:src="@drawable/tmklogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/lyEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="?colorSecondary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/contact_icon"
                    android:src="@drawable/ic_gmail" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:text="Email: "
                    android:textColor="?colorOnSecondary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:text="tmk.muse@gmail.com"
                    android:textColor="?colorOnSecondary"
                    android:textSize="14sp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/lyFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="?colorSecondary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/contact_icon"
                    android:src="@drawable/ic_facebook" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:text="Facebook: "
                    android:textColor="?colorOnSecondary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:text="ထုင်ႉမၢဝ်းၶမ်း"
                    android:textColor="?colorOnSecondary"
                    android:textSize="14sp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/lyGithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="?colorSecondary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/contact_icon"
                    android:src="@drawable/ic_github" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:text="Github: "
                    android:textColor="?colorOnSecondary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:text="Get source code"
                    android:textColor="?colorOnSecondary"
                    android:textSize="14sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/lyPlayStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?colorSecondary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"

                android:padding="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/contact_icon"
                    android:src="@drawable/ic_playstore" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:text="Rate this app on Play Store"
                    android:textColor="?colorOnSecondary"
                    android:textSize="16sp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_version"
        android:textColor="?colorOnPrimaryContainer" />

</RelativeLayout>